--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^6.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-form": "^1.3.0",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^1.1.1"
   },
