--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "jquery.scrollto": "^2.1.2",
     "normalize.css": "^6.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-form": "^1.3.0",
+    "react-form": "^2.0.0",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^1.1.1"
   },
