--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "country-list": "^1.1.0",
+    "halogen": "^0.2.0",
     "jquery.scrollto": "^2.1.2",
     "normalize.css": "^6.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-form": "^2.0.0",
+    "react-form": "^2.12.0",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^1.1.1",
     "validator": "^9.1.1"
